@@ -1,5 +1,8 @@
 2013-06-16  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
+	* eww.el (eww-tag-body): Override the shr body rendering so that we can
+	put a background colour onto the entire buffer.
+
 	* shr.el (shr-parse-base): Fix parsing error.
 
 	* eww.el (eww-submit): Pass the base in to `shr-expand-url'.
